S109: adjusted to match repo folder structure

--- a/papers/109/source/ccscse25_109.tex
+++ b/papers/109/source/ccscse25_109.tex
@@ -121,9 +121,9 @@ This comparison reveals that while students often use the same tools for multipl
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\linewidth]{paper_template/Figures/ai_tool_usage_comparison.png}
+    \includegraphics[width=0.7\linewidth]{Figures/ai_tool_usage_comparison.png}
     \caption{Comparison of AI Tool Usage for Grammar Improvement vs. Text Generation (Fall 2024 \& Spring 2025 Combined)}
-    \label{paper_template/Figures/fig:ai_tool_usage}
+    \label{Figures/fig:ai_tool_usage}
 \end{figure}
 
 \textbf{Impact of AI on Grammar, Writing Quality, and Topic Comprehension} The fourth research question assessed whether students found AI helpful in improving grammar and writing quality in their chapter analysis submissions. As shown in Figure~\ref{fig:ai_impact}, most students reported positive effects: 19\% indicated a significant improvement, 46\% reported improvement, and 28\% noted slight improvement. Only 7\% of students stated that AI did not help. These findings align with the demographic characteristics of GGC’s student body, which includes a high percentage of first-generation and non-native English-speaking students. AI likely served as a valuable support tool for language refinement and structural clarity.
@@ -132,7 +132,7 @@ The fifth research question explored whether AI-assisted grammar and writing imp
 
 \begin{figure}[h]
   \centering
-  \includegraphics[width=0.7\linewidth]{paper_template/Figures/ai_impact_split.png}
+  \includegraphics[width=0.7\linewidth]{Figures/ai_impact_split.png}
   \caption{Student-reported impact of AI on grammar, writing quality, and chapter comprehension.}
   \label{fig:ai_impact}
 \end{figure}
@@ -208,7 +208,7 @@ This finding is among the most notable of the study, highlighting AI’s role no
 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.95\linewidth]{paper_template/Figures/ai_q10_q11_split_horizontal.png}
+\includegraphics[width=0.95\linewidth]{Figures/ai_q10_q11_split_horizontal.png}
 \caption{Student-reported impact of AI use on comprehension of chapter topics (left) and preparedness for class participation (right).}
 \label{fig:ai_q10_q11}
 \end{figure}
