S114: remove minted from mainpage

--- a/papers/114/source/ccscse25_114.tex
+++ b/papers/114/source/ccscse25_114.tex
@@ -3,7 +3,7 @@
 %--------------------------------
 %\usepackage{enumitem}
 \usepackage{listings}
-\usepackage{minted}
+%\usepackage{minted}
 \lstset{basicstyle=\small\ttfamily,columns=fullflexible,breaklines=true} 
 \usepackage[table]{xcolor}
 \usepackage{graphicx}
