S126: integrate build files, adjust package load order

--- a/papers/126/source/ccscse25_126.tex
+++ b/papers/126/source/ccscse25_126.tex
@@ -1,11 +1,10 @@
-\documentclass{article}
+\documentclass[table]{article}
 
-\usepackage{tikz}
-\usetikzlibrary{trees}
 \usepackage{tabularx}
 \usepackage{subcaption}
 
 \input{preamble}
+\usetikzlibrary{trees}
 
 \addbibresource{main.bib}
 
@@ -280,3 +279,6 @@ This study presents a comprehensive framework for evaluating the quality of synt
 \printbibliography
 
 \end{document}
+
+
+
