--- a/papers/126/source/preamble.tex
+++ b/papers/126/source/preamble.tex
@@ -18,6 +18,7 @@
 
 \usepackage{array}
 \usepackage[table]{xcolor}
+\usepackage{tikz}
 \usepackage{multirow}
 \usepackage{booktabs}
 \usepackage{hhline}
