S132: Fixed issue with mix of bibtex and biblatex added to preamble

--- a/papers/132/source/preamble.tex
+++ b/papers/132/source/preamble.tex
@@ -66,8 +66,8 @@
 \titleformat*{\subsection}{\normalsize\bfseries}
 \titleformat*{\subsubsection}{\normalsize\bfseries}
 
-\bibliographystyle{plain}
-\bibliography{sample}
+% \bibliographystyle{plain}
+% \bibliography{sample}
 \usepackage{biblatex}
 
 \usepackage{longtable}
