S166: Submission has significant editing errors

--- a/papers/166/source/ccscse25_166.tex
+++ b/papers/166/source/ccscse25_166.tex
@@ -5,12 +5,12 @@
 % Hare Rama Hare Rama Rama Rama Hare Hare
 
 
-%\documentclass{article}
-\documentclass[12pt]{article} % 12-point font
-\usepackage{times}            % Times New Roman (or use \usepackage{newtxtext,newtxmath} for better modern version)
-\usepackage[margin=1in]{geometry} % 1-inch margins
-\usepackage{setspace}
-\singlespacing  
+\documentclass{article}
+% \documentclass[12pt]{article} % 12-point font
+% \usepackage{times}            % Times New Roman (or use \usepackage{newtxtext,newtxmath} for better modern version)
+% \usepackage[margin=1in]{geometry} % 1-inch margins
+% \usepackage{setspace}
+% \singlespacing  
 \input{preamble}
 
 \title{Teaching NLP and Machine Learning Through Case Studies Using Interactive Environments\footnote{\protect\input{copyleft}}
