T153: Pull xeCYK out of preamble, not used and crashing stuff

--- a/tutorial/153/source/preamble.tex
+++ b/tutorial/153/source/preamble.tex
@@ -33,7 +33,7 @@
 
 \usepackage{rotating}
 
-\usepackage{xeCJK}
+%\usepackage{xeCJK}
 
 %% support use of straight quotes in code listings
 \usepackage[T1]{fontenc}
