--- a/nifty/N002/source/preamble.tex
+++ b/nifty/N002/source/preamble.tex
@@ -33,7 +33,7 @@
 
 \usepackage{rotating}
 
-\usepackage{xeCJK}
+%\usepackage{xeCJK}
 
 %% support use of straight quotes in code listings
 \usepackage[T1]{fontenc}
