--- a/tutorial/138/source/ccscse25_138.tex
+++ b/tutorial/138/source/ccscse25_138.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 \input{preamble}
-\addbibresource{sample.bib}
-\title{Convergence of Disciplines in Computer Science Programs\footnote{\protect\input{copyright}}\\ 
+%\addbibresource{sample.bib}
+\title{Convergence of Disciplines in Computer Science Programs\footnote{\protect\input{copyleft}}\\ 
  Conference Tutorial \\}
 
 \author{
