S165: fix latex errors

--- a/papers/165/source/refs.bib
+++ b/papers/165/source/refs.bib
@@ -1,72 +1,82 @@
-@online{cleland2013evaluating,
-  author    = {Cleland, S.},
-  title     = {Evaluating the effectiveness of a real-life, team-based software development project for tertiary students},
-  year      = {2013},
-  note      = {\url{https://espace.curtin.edu.au/bitstream/20.500.11937/1985/2/199150_Cleland%202014.pdf}}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% https://bibdesk.sourceforge.io/
+
+%% Created for Adam Lewis at 2025-10-22 09:49:40 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@mastersthesis{cleland2013evaluating,
+	author = {Cleland, Sandra},
+	date-modified = {2025-10-22 09:49:35 -0500},
+	school = {Curtin University},
+	title = {Evaluating the Effectiveness of a Real-Life, Team Based Software Development Project for Tertiary Students},
+	year = {2013}}
 
 @inproceedings{begel2008struggles,
-  author    = {Begel, Andrew and Simon, Beth},
-  title     = {Struggles of new college graduates in their first software development job},
-  booktitle = {Proceedings of the 39th SIGCSE Technical Symposium on Computer Science Education},
-  year      = {2008},
-  pages     = {226--230},
-  doi       = {10.1145/1352135.1352218}
-}
+	author = {Begel, Andrew and Simon, Beth},
+	booktitle = {Proceedings of the 39th SIGCSE Technical Symposium on Computer Science Education},
+	doi = {10.1145/1352135.1352218},
+	pages = {226--230},
+	title = {Struggles of new college graduates in their first software development job},
+	year = {2008},
+	bdsk-url-1 = {https://doi.org/10.1145/1352135.1352218}}
 
 @article{way2005framework,
-  author    = {Way, Thomas},
-  title     = {A company-based framework for a software engineering course},
-  journal   = {Journal of Computing Sciences in Colleges},
-  volume    = {21},
-  number    = {1},
-  pages     = {132--139},
-  year      = {2005},
-  doi       = {10.1145/1047344.1047399}
-}
+	author = {Way, Thomas},
+	doi = {10.1145/1047344.1047399},
+	journal = {Journal of Computing Sciences in Colleges},
+	number = {1},
+	pages = {132--139},
+	title = {A company-based framework for a software engineering course},
+	volume = {21},
+	year = {2005},
+	bdsk-url-1 = {https://doi.org/10.1145/1047344.1047399}}
 
 @inproceedings{radermacher2014skillgap,
-  author    = {Radermacher, Alicia and Walia, Gursimran and Knudson, Debra},
-  title     = {Investigating the skill gap between graduating students and industry expectations},
-  booktitle = {Proceedings of the 45th ACM Technical Symposium on Computer Science Education},
-  year      = {2014},
-  pages     = {291--296},
-  doi       = {10.1145/2591062.2591159}
-}
+	author = {Radermacher, Alicia and Walia, Gursimran and Knudson, Debra},
+	booktitle = {Proceedings of the 45th ACM Technical Symposium on Computer Science Education},
+	doi = {10.1145/2591062.2591159},
+	pages = {291--296},
+	title = {Investigating the skill gap between graduating students and industry expectations},
+	year = {2014},
+	bdsk-url-1 = {https://doi.org/10.1145/2591062.2591159}}
 
 @article{gonzalez2020experiential,
-  author    = {González-Huerta, Javier and Molléri, Jefferson Seide and Šāblis, Andris and Zabardast, Esmaeel},
-  title     = {Experiential learning approach for software engineering courses at the higher education level},
-  journal   = {arXiv preprint arXiv:2012.14178},
-  year      = {2020},
-  doi       = {10.48550/arXiv.2012.14178}
-}
+	author = {Gonz{\'a}lez-Huerta, Javier and Moll{\'e}ri, Jefferson Seide and {\v S}{\=a}blis, Andris and Zabardast, Esmaeel},
+	doi = {10.48550/arXiv.2012.14178},
+	journal = {arXiv preprint arXiv:2012.14178},
+	title = {Experiential learning approach for software engineering courses at the higher education level},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.48550/arXiv.2012.14178}}
 
 @inproceedings{kerslake2021web,
-  author    = {Kerslake, Claire and Karimi, Omid B.},
-  title     = {Project-based learning of web systems architecture},
-  booktitle = {Proceedings of the 52nd ACM Technical Symposium on Computer Science Education},
-  year      = {2021},
-  pages     = {656--662},
-  doi       = {10.1145/3456565.3460067}
-}
+	author = {Kerslake, Claire and Karimi, Omid B.},
+	booktitle = {Proceedings of the 52nd ACM Technical Symposium on Computer Science Education},
+	doi = {10.1145/3456565.3460067},
+	pages = {656--662},
+	title = {Project-based learning of web systems architecture},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1145/3456565.3460067}}
 
 @inproceedings{chow2021testing,
-  author    = {Chow, S. P. and Komarlu, T. and Conrad, P.},
-  title     = {Teaching and testing with modern technology stacks in undergraduate software engineering courses},
-  booktitle = {Proceedings of the 52nd ACM Technical Symposium on Computer Science Education},
-  year      = {2021},
-  pages     = {241--247},
-  doi       = {10.1145/3430665.3456352}
-}
+	author = {Chow, S. P. and Komarlu, T. and Conrad, P.},
+	booktitle = {Proceedings of the 52nd ACM Technical Symposium on Computer Science Education},
+	doi = {10.1145/3430665.3456352},
+	pages = {241--247},
+	title = {Teaching and testing with modern technology stacks in undergraduate software engineering courses},
+	year = {2021},
+	bdsk-url-1 = {https://doi.org/10.1145/3430665.3456352}}
 
 @article{ng2020agile,
-  author    = {Ng, Gerard and Cruz, Ricardo V.},
-  title     = {Student and faculty adviser insights into an Agile methodology integrated into a Filipino company-sponsored IT capstone program},
-  journal   = {International Journal of Hybrid Information Technology},
-  volume    = {13},
-  number    = {2},
-  pages     = {33--46},
-  year      = {2020},
-  doi       = {10.21742/ijhit.2020.13.2.03}
-}
+	author = {Ng, Gerard and Cruz, Ricardo V.},
+	doi = {10.21742/ijhit.2020.13.2.03},
+	journal = {International Journal of Hybrid Information Technology},
+	number = {2},
+	pages = {33--46},
+	title = {Student and faculty adviser insights into an Agile methodology integrated into a Filipino company-sponsored IT capstone program},
+	volume = {13},
+	year = {2020},
+	bdsk-url-1 = {https://doi.org/10.21742/ijhit.2020.13.2.03}}
