S167: Author cut paper to size, with correct formatting

--- a/papers/167/source/cfit.bib
+++ b/papers/167/source/cfit.bib
@@ -1,97 +1,88 @@
 @article{barth2021,
   author    = {Barth, J. M. and Dunlap, S. T. and Bolland, A. C. and McCallum, D. M. and Acoff, V. L.},
-  title     = {Variability in STEM summer bridge programs: Associations with belonging and STEM self-efficacy},
+  title     = {Variability in STEM Summer Bridge Programs: Associations with Belonging and STEM Self-Efficacy},
   journal   = {Frontiers in Education},
   volume    = {6},
   year      = {2021},
   pages     = {667589},
-  doi       = {10.3389/feduc.2021.667589}
+  doi       = {10.3389/feduc.2021.667589},
+  url       = {https://www.frontiersin.org/articles/10.3389/feduc.2021.667589/full}
 }
 
 @article{bradford2021,
   author    = {Bradford, B. C. and Beier, M. E. and Oswald, F. L.},
-  title     = {A meta-analysis of university STEM summer bridge program effectiveness},
-  journal   = {CBE—Life Sciences Education},
+  title     = {A Meta-analysis of University STEM Summer Bridge Program Effectiveness},
+  journal   = {CBE--Life Sciences Education},
   volume    = {20},
   number    = {2},
   pages     = {ar21},
   year      = {2021},
-  doi       = {10.1187/cbe.20-10-0232}
+  doi       = {10.1187/cbe.20-10-0232},
+  url       = {https://www.lifescied.org/doi/10.1187/cbe.20-10-0232}
 }
 
 @article{estrada2018,
-  author    = {Estrada, Mica and Hernandez, P. R. and Schultz, P. W.},
-  title     = {A longitudinal study of how quality mentorship and research experience integrate underrepresented minorities into STEM careers},
-  journal   = {CBE—Life Sciences Education},
+  author    = {Estrada, M. and Hernandez, P. R. and Schultz, P. W.},
+  title     = {A Longitudinal Study of How Quality Mentorship and Research Experience Integrate Underrepresented Minorities into STEM Careers},
+  journal   = {CBE--Life Sciences Education},
   volume    = {17},
   number    = {1},
   pages     = {ar9},
   year      = {2018},
   doi       = {10.1187/cbe.17-04-0066},
-  url       = {https://doi.org/10.1187/cbe.17-04-0066}
+  url       = {https://www.lifescied.org/doi/10.1187/cbe.17-04-0066}
 }
 
 @article{toven2015,
-  author    = {Toven-Lindsey, Brit and Levis-Fitzgerald, Marc and Barber, Paul H. and Hasson, Tama},
+  author    = {Toven-Lindsey, B. and Levis-Fitzgerald, M. and Barber, P. H. and Hasson, T.},
   title     = {Increasing Persistence in Undergraduate Science Majors: A Model for Institutional Support of Underrepresented Students},
-  journal   = {CBE—Life Sciences Education},
+  journal   = {CBE--Life Sciences Education},
   volume    = {14},
   number    = {2},
-  year      = {2015},
   pages     = {ar12},
+  year      = {2015},
   doi       = {10.1187/cbe.14-05-0082},
-  pmid      = {25828403},
-  pmcid     = {PMC4477728},
-  publisher = {American Society for Cell Biology},
-  url       = {https://doi.org/10.1187/cbe.14-05-0082}
+  url       = {https://www.lifescied.org/doi/10.1187/cbe.14-05-0082}
 }
-
 
 @article{theobald2020,
   author    = {Theobald, E. J. and Hill, M. J. and Tran, E. and Agrawal, S. and Arroyo, E. N. and Behling, S. and Freeman, S.},
-  title     = {Active learning narrows achievement gaps for underrepresented students in undergraduate STEM},
+  title     = {Active Learning Narrows Achievement Gaps for Underrepresented Students in Undergraduate STEM},
   journal   = {Proceedings of the National Academy of Sciences},
   volume    = {117},
   number    = {12},
   pages     = {6476--6483},
   year      = {2020},
-  doi       = {10.1073/pnas.1916903117}
+  doi       = {10.1073/pnas.1916903117},
+  url       = {https://www.pnas.org/doi/10.1073/pnas.1916903117}
 }
 
 @inproceedings{washington2020,
-  author    = {Washington, Alicia Nicki},
+  author    = {Washington, A. N.},
   title     = {When Twice as Good Isn't Enough: The Case for Cultural Competence in Computing},
   booktitle = {Proceedings of the 51st ACM Technical Symposium on Computer Science Education (SIGCSE '20)},
   pages     = {213--219},
   year      = {2020},
-  publisher = {Association for Computing Machinery},
-  address   = {New York, NY, USA},
   doi       = {10.1145/3328778.3366792},
   url       = {https://doi.org/10.1145/3328778.3366792}
 }
 
-
-
 @inproceedings{tew2010,
-  author    = {Tew, Allison Elliott and Guzdial, Mark},
-  title     = {Developing a validated assessment of fundamental {CS}1 concepts},
+  author    = {Tew, A. E. and Guzdial, M.},
+  title     = {Developing a Validated Assessment of Fundamental CS1 Concepts},
   booktitle = {Proceedings of the 41st ACM Technical Symposium on Computer Science Education (SIGCSE '10)},
-  year      = {2010},
   pages     = {97--101},
-  publisher = {ACM},
-  address   = {New York, NY, USA},
-  doi       = {10.1145/1734263.1734297}
+  year      = {2010},
+  doi       = {10.1145/1734263.1734297},
+  url       = {https://doi.org/10.1145/1734263.1734297}
 }
 
 @inproceedings{kirkpatrick2017,
-  author    = {Kirkpatrick, Michael S. and Mayfield, Chris L.},
+  author    = {Kirkpatrick, M. S. and Mayfield, C. L.},
   title     = {Evaluating an Alternative CS1 for Students with Prior Programming Experience},
-  booktitle = {Proceedings of the 2017 ACM Technical Symposium on Computer Science Education (SIGCSE ’17)},
+  booktitle = {Proceedings of the 2017 ACM Technical Symposium on Computer Science Education (SIGCSE '17)},
   pages     = {333--338},
   year      = {2017},
-  publisher = {ACM},
-  address   = {New York, NY, USA},
-  doi       = {10.1145/3017680.3017759}
+  doi       = {10.1145/3017680.3017759},
+  url       = {https://doi.org/10.1145/3017680.3017759}
 }
-
-
